[gd_scene load_steps=2 format=3 uid="uid://djhj54uwxox8x"]

[ext_resource type="Script" path="res://item.gd" id="1_rems5"]

[node name="item" type="Node2D"]
script = ExtResource("1_rems5")

[node name="itemTexture" type="TextureRect" parent="."]
stretch_mode = 2

[connection signal="mouse_entered" from="itemTexture" to="." method="_on_item_texture_mouse_entered"]
[connection signal="mouse_exited" from="itemTexture" to="." method="_on_item_texture_mouse_exited"]
